5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1575_1332.log
== TEST (2019-03-12 21:56:40) 
-- CODE:
aresta =
area = 5
 
print(round(5=3/4.1/3a**2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:56:59) 
-- CODE:
aresta =
area = 5
 
print(round(5=3/41/3a**2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:57:21) 
-- CODE:
aresta =5
area = 5
 
print(round(5=3/41/3a**2, 4))
-- ERROR:
File "XXXX", line 4
    print(round(5=3/41/3a**2, 4))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:58:59) 
-- CODE:
aresta =5
area = 5
 
print(round(5=3/4(3a**2)**0,5, 4))
-- ERROR:
File "XXXX", line 4
    print(round(5=3/4(3a**2)**0,5, 4))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:59:29) 
-- CODE:
aresta =5
area = 5
 
print(round(5=3/4(3a**2)**0.5, 4))
-- ERROR:
File "XXXX", line 4
    print(round(5=3/4(3a**2)**0.5, 4))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:59:57) 
-- CODE:
aresta =5
area = 5
 
print(round(A=3/4(3a**2)**0.5, 4))
-- ERROR:
File "XXXX", line 4
    print(round(A=3/4(3a**2)**0.5, 4))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:01:05) 
-- CODE:
aresta =5
area = 5
 
print(round(A=3/4(3a ** 2)**0.5, 4))
-- ERROR:
File "XXXX", line 4
    print(round(A=3/4(3a ** 2)**0.5, 4))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:01:22) 
-- CODE:
aresta =5
area = 5
 
print(round(5=3/4(3a ** 2)**0.5, 4))
-- ERROR:
File "XXXX", line 4
    print(round(5=3/4(3a ** 2)**0.5, 4))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:03:03) 
-- CODE:
aresta =5
area = 5
 
print(round(5=3/2(3a ** 2)**0.5, 4))
-- ERROR:
File "XXXX", line 4
    print(round(5=3/2(3a ** 2)**0.5, 4))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:03:19) 
-- CODE:
aresta =5
area = 5
 
print(round(5=3/2(3a**2)**0.5, 4))
-- ERROR:
File "XXXX", line 4
    print(round(5=3/2(3a**2)**0.5, 4))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 06:03:12) 
-- CODE:
aresta =5
area = 5
 
print(round(5=3/2(3a**2)**0.5, 4))
-- ERROR:
File "XXXX", line 4
    print(round(5=3/2(3a**2)**0.5, 4))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 06:04:06) 
-- CODE:
aresta =5
area = 3/2(3a**2)**0.5, 4
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2(3a**2)**0.5, 4
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 06:05:22) 
-- CODE:
aresta =5
area = 3/2*(3**0.5)aresta**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*(3**0.5)aresta**2
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 06:05:57) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5)aresta**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = (3/2)*(3**0.5)aresta**2
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 06:06:19) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)aresta**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =(3/2)*(3**0.5)aresta**2
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:33:16) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)aresta**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =(3/2)*(3**0.5)aresta**2
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:35:19) 
-- CODE:
aresta =5
area =(3/2)*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:35:57) 
-- CODE:
aresta =5
area =(3/2)*(3*aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.153573
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:36:37) 
-- CODE:
aresta =5
area =(3/2)*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:38:33) 
-- CODE:
aresta =5
area =(3//2)*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
8.6603
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:39:44) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)*aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.137896
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:39:48) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)*aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:40:17) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)*aresta**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:40:23) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)*aresta**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:43:21) 
-- CODE:
aresta =5
area =((3)*(3**0.5)*aresta**2)/2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:44:55) 
-- CODE:
aresta =5
area =((3/2)*(3**0.5)*aresta**2)/2
 
print(round(area, 4))
-- OUTPUT:
32.476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:45:01) 
-- CODE:
aresta =5
area =((3/2)*(3**0.5)*aresta**2)/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.174923
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
32.476
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:45:43) 
-- CODE:
aresta =5
area =((3/2)*(3**0.5)*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:45:48) 
-- CODE:
aresta =5
area =((3/2)*(3**0.5)*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.130184
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:55:12) 
-- CODE:
aresta =5
area =((3/2)*(3**0.5)*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:03:12) 
-- CODE:
aresta =5
area =((3/2)*(3**0.5)*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.136205
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
